uefi-macros/tests/ui/fail/entry_bad_return_type.stderr
error[E0308]: mismatched types
 --> tests/ui/fail/entry_bad_return_type.rs:8:1
  |
8 | fn main(_handle: Handle, _st: SystemTable<Boot>) -> bool {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Status`, found `bool`
  |
  = note: expected fn pointer `extern "efiapi" fn(uefi::Handle, uefi::table::SystemTable<_>) -> Status`
             found fn pointer `extern "efiapi" fn(uefi::Handle, uefi::table::SystemTable<_>) -> bool`
